<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme_setting">Темная тема</string>
    <string name="share_app_setting">Поделиться приложением</string>
    <string name="write_to_support_setting">Написать в поддержку</string>
    <string name="user_agreement_setting">Пользовательское соглашение</string>
    <string name="name_button_to_main_page">Кнопка возврата на главный экран приложения</string>
    <string name="button">Кнопка</string>
    <string name="dark_theme">Темная тема</string>
    <string name="choose_app_for_share">Выберите приложение для отправки:</string>
    <string name="url_course">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="dev_mail">maximdenisov34@gmail.com</string>
    <string name="title_mail_for_dev">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_mail_for_dev">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agree">https://yandex.ru/legal/practicum_offer/</string>
</resources>