<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/minimal_indent_size"
            android:layout_marginStart="@dimen/minimal_indent_size">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/app_name"
                android:fontFamily="@font/ysd_light"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/standart_text_main_page_size"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        style="@style/ButtonOnMainPage"
        android:contentDescription="@string/search"
        android:text="@string/search"
        app:icon="@drawable/search_ic_vector" />

    <Button
        android:id="@+id/media_button"
        style="@style/ButtonOnMainPage"
        android:contentDescription="@string/media"
        android:text="@string/media"
        app:icon="@drawable/media_ic_vector" />

    <Button
        android:id="@+id/settings_button"
        style="@style/ButtonOnMainPage"
        android:contentDescription="@string/settings"
        android:text="@string/settings"
        app:icon="@drawable/settings_ic_vector" />

</LinearLayout>