<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standart_start_indent_screen_page_size"
        app:navigationIcon="@drawable/arrow_ic_vector"
        app:title="Настройки"
        app:titleTextAppearance="@style/SettingsToolBar" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_attribute_settings"
        android:fontFamily="@font/ysd_regular"
        android:paddingStart="@dimen/standart_indent_main_page_size"
        android:paddingEnd="@dimen/standart_indent_size"
        android:text="@string/dark_theme_setting"
        android:textColor="@color/black"
        android:textSize="@dimen/standart_text_setting_page_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_attribute_settings"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/share_app_setting"
        android:fontFamily="@font/ysd_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/standart_indent_main_page_size"
        android:paddingEnd="@dimen/standart_indent_main_page_size"
        android:text="@string/share_app_setting"
        android:textColor="@color/black"
        android:textSize="@dimen/standart_text_setting_page_size"
        app:drawableEndCompat="@drawable/share_app_ic_vector" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_attribute_settings"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/write_to_support_setting"
        android:fontFamily="@font/ysd_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/standart_indent_main_page_size"
        android:paddingEnd="@dimen/standart_indent_size"
        android:text="@string/write_to_support_setting"
        android:textColor="@color/black"
        android:textSize="@dimen/standart_text_setting_page_size"
        app:drawableEndCompat="@drawable/write_to_support_ic_vector" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_attribute_settings"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/user_agreement_setting"
        android:fontFamily="@font/ysd_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/standart_indent_main_page_size"
        android:paddingEnd="20dp"
        android:text="@string/user_agreement_setting"
        android:textColor="@color/black"
        android:textSize="@dimen/standart_text_setting_page_size"
        app:drawableEndCompat="@drawable/user_agreement_ic_vector" />

</LinearLayout>